@startuml

title __HELP's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace help {
          class com.pis.buy2gether.usecases.home.user.help.HelpFragment {
              ~ btn_return : ImageButton
              + onCreateView()
              + onDestroyView()
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace user {
        namespace help {
          class com.pis.buy2gether.usecases.home.user.help.HelpViewModel {
              - mText : MutableLiveData<String>
              + HelpViewModel()
              + getText()
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.user.help.HelpFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.user.help.HelpFragment o-- com.pis.buy2gether.databinding.FragmentHelpBinding : binding
  com.pis.buy2gether.usecases.home.user.help.HelpFragment o-- com.pis.buy2gether.usecases.home.user.help.HelpViewModel : helpViewModel
  com.pis.buy2gether.usecases.home.user.help.HelpViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
